# xbot2_mujoco

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-and-test-ros2-noble.yml
bindings/python/: CMakeLists.txt  PyXbotMjSim.cpp  PyXbotMjSimEnv.cpp
config/: centauro.yaml
docker/noble-ros2/: Dockerfile  compose.yaml
docker/noble-ros2/scripts/: build.bash  test.bash
python/: pyproject.toml
python/src/xbot2_py_mujoco/: mj_xbot2_bridge.py  mjcf_tools.py  simulate.py  simulator_wrapper.py
python/tests/: test_mjcf_generation.py  test_mjcf_tools.py  test_xbot2_bridge.py
python/tests/resources/: config.xml  nice_robot.srdf  nice_robot.urdf  world.xml  xbot2_config.yaml  xbot2_hal_config.yaml
src/: control.cpp  glfw_adapter.cc  launch_simulator.cpp  loading_utils.cpp  loading_utils.h  lodepng.cpp  lodepng.h  mj_sim_env.cpp  mj_sim_env.h  mujoco_simulator_wrapper.py  platform_ui_adapter.cc  simulate.cc  simulate.h  simulator.cpp  simulator.h  simulator_settings.h  uitools.h  xbot2_bridge.h  xbot2_bt_joint.cpp  xbot2_bt_joint.h  xbot2_mj_clock.cpp  xbot2_mj_clock.h  xbot2_mj_imu.cpp  xbot2_mj_imu.h  xbot2_mj_joint.cpp  xbot2_mj_joint.h  xbot2_mj_linkstate.cpp  xbot2_mj_linkstate.h  xbot2_utils.h  xmj_sim.cpp  xmj_sim.h  xmj_sim_env.cpp  xmj_sim_env.h  xmj_sim_env_settings.h
tests/: CMakeLists.txt  config.h.in  test_loading_utils.cpp  test_xmj_env.cpp
tests/PyXBotMjSim/: launch_simulator.py  test_stepping.py
tests/PyXBotMjSimEnv/: test_stepping.py
tests/files/: centauro.srdf  centauro.urdf  generate_test_xrdf.bash  sim_opt.xml  sites.xml  world.xml  xbot2_basic.yaml
tests/files/centauro/: centauro.urdf  sim_opt.xml  xbot2_basic.yaml
tests/files/unitree_b2w/: generate_test_xrdf.bash  sim_opt.xml  unitree_b2w.srdf  unitree_b2w.urdf  world.xml  xbot2_basic.yaml
