[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xbot2_py_mujoco"
version = "0.1.0"
description = "Python based XBot2 bridge for MuJoCo"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "LGPL-3.0-or-later" }
authors = [
    { name = "IIT" },
]
dependencies = [
    "mujoco",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov",
]

[project.urls]
Repository = "https://github.com/ADVRHumanoids/xbot2_py_mujoco"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["xbot2_py_mujoco"]
